--- a/index.html
+++ b/index.html
@@ -1,13 +1,117 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-project</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://apis.google.com/js/api.js" async defer></script>
+</head>
+<body>
+    <header>
+        <div class="header-content">
+            <h1>Google API Dashboard</h1>
+            <div id="auth-container">
+                <div id="login-section">
+                    <button id="signin-button" class="btn btn-primary">Login with Google</button>
+                </div>
+                <div id="user-section" style="display:none;">
+                    <span id="user-name">User</span>
+                    <button id="signout-button" class="btn btn-secondary">Logout</button>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <div id="welcome-message" class="welcome">
+            <h2>Welcome to Google API Dashboard!</h2>
+            <p>Log in with your Google account and try accessing various services</p>
+        </div>
+
+        <div id="loading" class="loading" style="display:none;">
+            <div class="spinner"></div>
+            <p>Connecting to Google API...</p>
+        </div>
+
+        <div id="dashboard" class="dashboard" style="display:none;">
+            <!-- Gmail section -->
+            <section id="gmail-section" class="api-section">
+                <div class="section-header">
+                    <h2>Gmail</h2>
+                    <button id="refresh-gmail" class="btn btn-small">Refresh</button>
+                </div>
+                <div id="gmail-content" class="content-area">
+                    <p>Loading emails...</p>
+                </div>
+            </section>
+
+            <!-- Google drive section -->
+             <section id="drive-section" class="api-section">
+                <div class="section-header">
+                    <h2>Google drive</h2>
+                    <button id="refresh-drive" class="btn btn-small">Update</button>
+                </div>
+                <div id="drive-content" class="content-area">
+                    <p>Loading files...</p>
+                </div>
+             </section>
+
+             <!-- Google calendar section -->
+              <section id="calendar-section" class="api-section">
+                <div class="section-header">
+                    <h2>📅 Google Calendar</h2>
+                    <button id="refresh-calendar" class="btn btn-small">Refresh</button>
+                </div>
+                <div id="calendar-content" class="content-area">
+                    <p>Loading events...</p>
+                </div>
+              </section>
+
+              <!-- Youtube section -->
+               <section id="youtube-section" class="api-section">
+                <div class="section-header">
+                    <h2>🎥 YouTube</h2>
+                </div>
+                <div id="youtube-content" class="content-area">
+                    <div class="search-box">
+                        <input type="text" id="youtube-search" placeholder="Search videos..." />
+                        <button id="youtube-search-btn" class="btn btn-primary">Search</button>
+                    </div>
+                    <div id="youtube-results"></div>
+                </div>
+            </section>
+
+            <!-- Google map section -->
+             <section id="maps-section" class="api-section">
+                <div class="section-header">
+                    <h2>🗺️ Google Maps</h2>
+                </div>
+                <div id="maps-content" class="content-area">
+                    <div class="search-box">
+                        <input type="text" id="maps-search" placeholder="Search location..." />
+                        <button id="maps-search-btn" class="btn btn-primary">Search</button>
+                    </div>
+                    <div id="map" class="map-container"></div>
+                </div>
+            </section>
+        </div>
+        <div id="error-message" class="error" style="display:none;">
+            <h3>⚠️ An error occurred</h3>
+            <p id="error-text"></p>
+        </div>
+    </main>
+
+
+    <!-- Config (API keys) -->
+    <script src="config.js"></script>
+    <!-- Main scripts -->
+    <script src="script.js"></script>
+    <script src="components/gmail.js"></script>
+    <script src="components/drive.js"></script>
+    <script src="components/calendar.js"></script>
+    <script src="components/maps.js"></script>
+    <script src="components/youtube.js"></script>
+</body>
 </html>
